# investe-bem-brasil

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.server.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: alerts.py  analytics.py  assets.py  assistant.py  health.py  insights.py  portfolio.py
backend/app/core/: config.py  logging.py
backend/app/db/: investebem.db-shm  investebem.db-wal  models.py  session.py
backend/app/repositories/: alerts.py  assets.py  insights.py  news.py  price_data.py
backend/app/schemas/: alert.py  analytics.py  asset.py  assistant.py  insight.py  portfolio.py
backend/app/services/: ai_insights.py  alerts.py  analytics.py  market_data.py  portfolio.py
backend/app/tasks/: scheduler.py
backend/investe_bem_brasil_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docker/: express.Dockerfile
server/: .env  .env.example  app.ts  database.ts  index.ts  seed.ts  tsconfig.json
server/__tests__/: api.test.ts
server/data/: investebem.db  investebem.db-shm  investebem.db-wal
server/services/: budgets.ts  goals.ts  insights.ts  investments.ts  reports.ts  transactions.ts
server/src/: app.ts  config.ts  database.ts  index.ts  logger.ts  types.ts
src/: App.tsx  index.css  vite-env.d.ts
src/lib/: api.ts  (+3 more)
tests/: setup.ts
(+36 files in other folders)
