[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "investe-bem-brasil-backend"
version = "0.1.0"
description = "FastAPI backend for intelligent portfolio monitoring in Investe Bem Brasil."
authors = [{name = "Investe Bem Brasil"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "yfinance>=0.2.40",
    "httpx>=0.27.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "google-generativeai>=0.5.4",
    "aiosmtplib>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
investe-bem-api = "app.main:app"

